# substrate

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
crates/substrate-pager/: Cargo.toml
crates/substrate-pager/benches/: branch.rs
crates/substrate-pager/src/: branch.rs  cas.rs  clock.rs  diff.rs  error.rs  gc.rs  lib.rs  manifest.rs  metrics.rs  page.rs  pager.rs  scrub.rs  testing.rs  vfs.rs
crates/substrate-pager/tests/: branching.rs  keyed.rs  oracle.proptest-regressions  oracle.rs
crates/substrate-security/: Cargo.toml
crates/substrate-security/src/: crypt.rs  error.rs  keys.rs  lib.rs  license.rs
crates/substrate-security/tests/: encrypted_store.rs
crates/substrate-store/: Cargo.toml
crates/substrate-store/src/: error.rs  hotset.rs  lib.rs  manifests.rs  remote.rs  tier.rs
crates/substrate-store/tests/: batch_fetch.rs  gated.rs  lifecycle.rs  manifest_batch_fetch.rs  wake_overlap.rs  warm_set_concurrency.rs
crates/substrate-wal/: Cargo.toml
crates/substrate-wal/src/: error.rs  lib.rs  record.rs  wal.rs
crates/substrate-wal/tests/: crash.rs
docs/: 02-embedded-single-node-engine-architecture.md  03-agent-native-database-architecture.md  04-flockdb-loomdb-unified-roadmap.md  05-loomdb-test-spec.md  substrate-api.md  threat-model.md
testing/fuzz/: Cargo.toml
testing/fuzz/fuzz_targets/: pager_ops.rs
testing/integration/: Cargo.toml
