[package]
name = "substrate-pager"
description = "Content-addressed immutable page store with O(1) fork, snapshot, and crash-safe GC."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["database", "storage-engine", "content-addressed", "copy-on-write"]
categories = ["database-implementations"]

[dependencies]
blake3.workspace = true
thiserror.workspace = true
serde = { workspace = true }
bincode.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[features]
default = []
# Compile-time amputation of all outbound networking (CLAUDE.md rule 5).
airgap = []
# PageId = BLAKE3_keyed(pool_key, plaintext). Mandatory for CUI pools (docs/02 §9.1).
keyed-hash = []
# Crash-injection harness (CrashVfs, MemVfs). Test-only; not in a release build.
test-util = []
