[package]
name = "substrate-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
substrate-pager = { path = "../../crates/substrate-pager" }

[[bin]]
name = "pager_ops"
path = "fuzz_targets/pager_ops.rs"
test = false
doc = false
bench = false

[profile.release]
debug = true
overflow-checks = true
